--- a/examples/docusaurus/glean/docs/api/endpoint/client/authentication.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/client/authentication.mdx
@@ -6,11 +6,13 @@ sidebar_label: Client Authentication
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
+  CodeSample,
   ExpandableProperty,
   ExpandablePropertyDescription,
   ExpandablePropertyTitle,
   ExpandableSection,
   Operation,
+  OperationCodeSamplesSection,
   OperationDescriptionSection,
   OperationResponseBodyDescriptionSection,
   OperationResponseBodySection,
@@ -59,6 +61,45 @@ for use with the Client API (e.g. `/rest/api/v1/*`).
 
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab slot="tab" id="operation-createauthtoken+code-samples+typescript">
+
+TypeScript
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-createauthtoken+code-samples+typescript">
+
+<CodeSample>
+
+```typescript
+import { Glean } from "@gleanwork/api-client";
+
+const glean = new Glean({
+  apiToken: "GLEAN_API_TOKEN",
+});
+
+async function run() {
+  const result = await glean.client.authentication.createToken();
+
+  console.log(result);
+}
+
+run();
+
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationResponseBodySection slot="response-body">
 
