--- a/examples/docusaurus/glean/docs/api/endpoint/indexing/datasource.mdx
+++ b/examples/docusaurus/glean/docs/api/endpoint/indexing/datasource.mdx
@@ -6,6 +6,7 @@ sidebar_label: Indexing Datasource
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
+  CodeSample,
   ExpandableProperty,
   ExpandablePropertyBreakouts,
   ExpandablePropertyDescription,
@@ -13,6 +14,7 @@ import {
   ExpandablePropertyTitle,
   ExpandableSection,
   Operation,
+  OperationCodeSamplesSection,
   OperationDescriptionSection,
   OperationParametersSection,
   OperationResponseBodyDescriptionSection,
@@ -62,6 +64,51 @@ Tip: Refer to the [Troubleshooting tutorial](https://developers.glean.com/indexi
 
 
 </OperationDescriptionSection>
+
+<OperationCodeSamplesSection slot="code-samples">
+
+<TabbedSection>
+
+<SectionTab
+  slot="tab"
+  id="operation-post_api_index_v1_debug_datasource_status+code-samples+typescript"
+>
+
+TypeScript
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-post_api_index_v1_debug_datasource_status+code-samples+typescript"
+>
+
+<CodeSample>
+
+```typescript
+import { Glean } from "@gleanwork/api-client";
+
+const glean = new Glean({
+  apiToken: "GLEAN_API_TOKEN",
+});
+
+async function run() {
+  const result = await glean.indexing.datasource.status("<value>");
+
+  console.log(result);
+}
+
+run();
+
+```
+
+</CodeSample>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationCodeSamplesSection>
 
 <OperationParametersSection slot="parameters">
 
