--- a/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
@@ -8416,7 +8416,7 @@ defaultValue: MyDefaultValue
 
 <ExpandablePropertyDescription slot="description">
 
-ID of the model to use. You can use the [List Available Models](/api/#tag/models/operation/list_models_v1_models_get) API to see all of your available models, or see our [Model overview](/models) for model descriptions.
+ID of the model to use. You can use the List Available Models API to see all of your available models, or see our Model overview for model descriptions.
 
 </ExpandablePropertyDescription>
 
